# GenAINIAT

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: main.py
frontend/: app.js  index.html  styles.css
