[project]
name = "genainiat"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.19",
  "pypdf==5.1.0",
  "httpx==0.28.1",
]

[project.scripts]
app = "backend.main:app"

[tool.vercel]
entrypoint = "backend.main:app"
